# oxhide

./: .gitignore  Cargo.toml  IMPLEMENTATION_GUIDE.md
.claude/: settings.json  veracrypt-architecture.md
.claude/plans/: veracrypt-rust-rewrite.md
test-wdm/: Cargo.toml  test_wdm.inx
test-wdm-runner/: Cargo.toml
test-wdm-runner/src/: lib.rs
test-wdm/.cargo/: config.toml
test-wdm/src/: lib.rs
vcrypt-cli/: Cargo.toml
vcrypt-cli/src/: bench.rs  kernel_ioctl.rs  main.rs
vcrypt-cli/tests/: mount_integration.rs
vcrypt-core/: Cargo.toml
vcrypt-core/src/: error.rs  kernel.rs  lib.rs  rng.rs
vcrypt-core/src/ciphers/: aes_cipher.rs  camellia_cipher.rs  cascade.rs  kuznyechik_cipher.rs  mod.rs  serpent_cipher.rs  twofish_cipher.rs
vcrypt-core/src/hash/: blake2s.rs  mod.rs  sha256.rs  sha512.rs  streebog.rs  whirlpool.rs
vcrypt-core/src/kdf/: argon2id.rs  mod.rs  pbkdf2_blake2s.rs  pbkdf2_sha256.rs  pbkdf2_sha512.rs  pbkdf2_streebog.rs  pbkdf2_whirlpool.rs
vcrypt-core/src/xts/: mod.rs
vcrypt-driver/: Cargo.toml  OxhideTestCert.pfx  build.rs  vcrypt_driver.inx
vcrypt-driver-core/: Cargo.toml
vcrypt-driver-core/src/: ea_mapping.rs  geometry.rs  lib.rs  mount_struct.rs  sector_io.rs
vcrypt-driver/src/: crypto.rs  debug.rs  device.rs  driver.rs  encrypted_io_queue.rs  extension.rs  io_queue.rs  irp_utils.rs  lib.rs  mount.rs  mount_mgr.rs  names.rs  ntvol.rs  types.rs  volume.rs  volume_ioctl.rs  volume_thread.rs  wdk_bindings.rs
vcrypt-format/: Cargo.toml
vcrypt-format/src/: deser.rs  encrypt.rs  error.rs  header.rs  keyfile.rs  lib.rs  ser.rs
vcrypt-fs/: Cargo.toml
vcrypt-fs/src/: lib.rs  platform.rs
vcrypt-volume/: Cargo.toml
vcrypt-volume/src/: change.rs  config.rs  create.rs  error.rs  io.rs  layout.rs  lib.rs  open.rs  restore.rs  sector_cipher.rs  volume.rs
vcrypt-volume/tests/: compat.rs
