[workspace]

[package]
name = "test-wdm-runner"
version = "0.0.1"
edition = "2021"
description = "User-mode IOCTL client for the test-wdm kernel driver"

[dependencies]
windows-sys = { version = "0.59", features = [
    "Win32",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Foundation",
] }
