[package]
name = "vcrypt-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Always needed (ciphers for kernel + user mode)
aes = { workspace = true }
serpent = { workspace = true }
lsx = { workspace = true }
camellia = { workspace = true }
kuznyechik = { workspace = true }
zeroize = { workspace = true }

# std-only (hash, KDF, RNG — not used in kernel)
sha2 = { workspace = true, optional = true }
blake2 = { workspace = true, optional = true }
whirlpool = { workspace = true, optional = true }
streebog = { workspace = true, optional = true }
argon2 = { workspace = true, optional = true }
pbkdf2 = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
getrandom = { workspace = true, optional = true }

# Utilities
thiserror = { workspace = true, optional = true }

[features]
default = ["std"]
std = ["dep:thiserror", "dep:sha2", "dep:blake2", "dep:whirlpool", "dep:streebog", "dep:argon2", "dep:pbkdf2", "dep:hmac", "dep:getrandom"]
kernel = []

[dev-dependencies]
hex = { workspace = true }
criterion = { workspace = true }

[lib]
name = "vcrypt_core"
path = "src/lib.rs"
