[package]
name = "vcrypt-format"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
vcrypt-core = { path = "../vcrypt-core" }
crc = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
tempfile = { workspace = true }
