[package]
name = "vcrypt-fs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[target.'cfg(windows)'.dependencies]
winfsp = "0.13.0"
winfsp-sys = "0.12.1"

[target.'cfg(windows)'.build-dependencies]
winfsp = "0.13.0"

[dependencies]
vcrypt-volume = { path = "../vcrypt-volume" }
vcrypt-core = { path = "../vcrypt-core" }
parking_lot = "0.12"
