[package]
name = "vcrypt-volume"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
vcrypt-core = { path = "../vcrypt-core" }
vcrypt-format = { path = "../vcrypt-format" }
zeroize = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
log = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
tempfile = { workspace = true }
crc = { workspace = true }
